[package]
name = "chunky"
description = "Abstract storage of heterogeneously-sized entity-collections"
version = "0.1.4"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/chunky"
license = "MIT"
maintenance = { status = "experimental" }

[dependencies]
simple_allocator_trait = "0.1.0"

