[package]
name = "chunky"
description = "Abstract storage of heterogeneously-sized entity-collections"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/chunky"
license = "MIT"
maintenance = { status = "experimental" }
edition = "2018"

[dependencies]
memmap = "0.7.0"
